app/assets/stylesheets/govuk_elements.sass
$path: ''

// From GDS's alphagov/govuk_frontend_toolkit
@import 'colours'
@import 'font_stack'
@import 'measurements'
@import 'conditionals'
@import 'device-pixels'
@import 'grid_layout'
@import 'typography'
@import 'shims'

@import 'design-patterns/alpha-beta'
@import 'design-patterns/buttons'
@import 'design-patterns/breadcrumbs'

// From GDS's alphagov/govuk_elements
@import 'elements/helpers'
@import 'elements/reset'

// Base (unclassed HTML elements)
// These are predefined by govuk_template
// If you're not using govuk_template, uncomment the line below.
// HTML elements, set by the GOV.UK template
// @import 'elements/base'

@import 'elements/layout'
@import 'elements/elements-typography'
@import 'elements/buttons'
@import 'elements/icons'
@import 'elements/lists'
@import 'elements/tables'
@import 'elements/details'
@import 'elements/panels'
@import 'elements/forms'
@import 'elements/forms/form-block-labels'
@import 'elements/forms/form-date'
@import 'elements/forms/form-validation'
@import 'elements/breadcrumbs'
@import 'elements/phase-banner'
@import 'elements/components'

.list-contents li
  @include core-16

// School view
// ==========================================================================

.metadata-school-detail
  dt
    width: 40%
    float: left
    clear: left
    display: inline-block
    height: 1.75em
  dd
    width: 60%
    float: left
    height: 1.75em
    display: inline
  dd.address, p.previous-names
    height: 7em
  p.previous-names
    font-size: 90%
    color: grey

// Column full width
// ==========================================================================

.column-full
  @include grid-column(1)

.column-one-sixth
  @include grid-column(1/6)


// Type ahead search input
// ==========================================================================
#search
  display: inline

button.search
  margin-bottom: 20px

.form-control
  width: 280px

.tt-menu
  text-align: left

.typeahead, .tt-query, .tt-hint
  width: 396px
  padding-left: 8px
  font-size: 24px
  line-height: 34px
  border: 2px solid #ccc
  outline: none

.tt-highlight
  font-weight: bolder

.typeahead
  background-color: #fff

.typeahead:focus
  border: 2px solid #0097cf

.tt-query
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)

.tt-hint
  color: #999

.tt-menu
  width: 422px
  margin: 12px 0
  padding: 8px 0
  background-color: #fff
  border: 1px solid #ccc
  border: 1px solid rgba(0, 0, 0, 0.2)
  -webkit-border-radius: 8px
  -moz-border-radius: 8px
  border-radius: 8px
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2)
  -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2)
  box-shadow: 0 5px 10px rgba(0,0,0,.2)

.tt-suggestion
  padding: 3px 20px
  font-size: 18px
  line-height: 24px

.tt-suggestion:hover
  cursor: pointer
  color: #fff
  background-color: #0097cf

.tt-suggestion.tt-cursor
  color: #fff
  background-color: #0097cf

.tt-suggestion p
  margin: 0

// Custom map styles
// ==========================================================================
#map
  height: 400px

// Pagination styles
// ==========================================================================
.pagination
  float: right
  span
    margin-right: 5px
  .prev, .next
    margin-left: 10px
    margin-right: 10px

// Register styles
// ==========================================================================
dl.records
  font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif
  font-size: 16px
  line-height: 1.6
  list-style-position: outside
  h3
    font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif
    font-size: 27px
dt.record
  margin-bottom: 0.3rem
  font-weight: bold
  font-size: 18px
  a
    text-decoration: none
dd.record
  border-bottom: 1em solid #fff
  font-size: 16px
  padding: 1rem
  background: #EFEFEF

